--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -7,6 +7,17 @@
   }
 
 .mi-imagen {
-    width: 800px;
-    height: 400px;
-} 
+    width: 700px;
+    height: 300px;
+}
+
+.toast-center{
+    text-align: center;
+    width: 100%;
+    color: #d15f03;
+}
+
+.icono {
+    width: 60px;
+    height:40px;
+}
