se agrego ItemDetail e ItemDetailContainer

--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -7,8 +7,13 @@
   }
 
 .mi-imagen {
-    width: 700px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
+    margin: 10px;
+}
+
+.mi-carrousel{
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 1);
 }
 
 .toast-center{
